# GNC2

./: CMakeLists.txt  flash_target.jlink  reset_target.jlink
output/: GNC0200A.elf  GNC0200A.hex  GNC0200A.lss  GNC0200A.map
source/: comms.c  comms.h  global_eeprom.c  global_eeprom.h  global_imu.c  global_imu.h  global_ports.c  global_ports.h  global_variable_generator.py  global_variables.h  global_variables.json  global_variables2.h  global_variables_template.j2  globals.c  globals.h  main.c  navigation.c  navigation.h  rc_receiver.c  rc_receiver.h  util.c  util.h
source/Drivers/: adc.c  baro_ms56.c  baro_ms56.h  dma.c  eeprom_cat25.c  eeprom_cat25.h  flash_at25.c  flash_at25.h  imu_icm20948.c  imu_icm20948.h  uart.c  uart.h
source/Hardware/: GNC0200A.h
source/RTOS/: rtos_config.h  rtos_process.c  rtos_process.h
source/RTOSDrivers/: bus_manager.c  bus_manager.h  dma_baro_ms56.c  dma_baro_ms56.h  dma_eeprom_cat25.c  dma_eeprom_cat25.h  dma_flash_at25.c  dma_flash_at25.h  dma_imu_icm20948.c  dma_imu_icm20948.h  dma_spi.c  dma_spi.h  rtos_dma.c  rtos_dma.h  rtos_uart.c  rtos_uart.h  rtos_usb.c  rtos_usb.h
